[gd_scene load_steps=5 format=3 uid="uid://c4550alnvl3c3"]

[ext_resource type="Theme" uid="uid://bbaihvnlb6xkq" path="res://Assets/Nodes/UI/panel_theme.tres" id="1_84evw"]
[ext_resource type="Script" path="res://Assets/Code/add_component_panel.gd" id="1_ett0o"]
[ext_resource type="ButtonGroup" uid="uid://cn1e6il26vlu5" path="res://Assets/Nodes/UI/components_button_group.tres" id="2_nq14o"]
[ext_resource type="Script" path="res://Assets/Code/line_edit.gd" id="3_f3qbn"]

[node name="AddComponentPanel" type="Window"]
disable_3d = true
title = "Novo Componente"
initial_position = 4
size = Vector2i(250, 150)
visible = false
popup_window = true
theme = ExtResource("1_84evw")
script = ExtResource("1_ett0o")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -46.5
offset_right = 70.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Componente:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="ResistorButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_nq14o")
text = "Resistor"

[node name="BatteryButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_nq14o")
text = "Gerador"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Valor: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
script = ExtResource("3_f3qbn")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
disabled = true
text = "Confirmar"

[node name="CancelButton" type="Button" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Cancelar"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/ResistorButton" to="." method="_on_resistor_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/BatteryButton" to="." method="_on_battery_button_pressed"]
[connection signal="text_changed" from="VBoxContainer2/HBoxContainer2/LineEdit" to="VBoxContainer2/HBoxContainer2/LineEdit" method="_on_text_changed"]
[connection signal="text_submitted" from="VBoxContainer2/HBoxContainer2/LineEdit" to="VBoxContainer2/HBoxContainer2/LineEdit" method="_on_text_submitted"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
